--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BeforeCast - Fishing Weather App</title>
+    <title>Beforecast - Fishing Weather App</title>
     <link rel="stylesheet" href="css/styles.css">
     <meta name="description" content="BeforeCast provides weather, wind direction, air pressure, and moon phases for anglers. Plan your fishing trips with precision.">
     <meta name="keywords" content="BeforeCast, fishing, weather, app, anglers, moon phases">
