Updated to beforecast through site

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - BeforeCast</title>
+    <title>Contact Us - Beforecast</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -33,7 +33,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2025 BeforeCast. All rights reserved.</p>
+        <p>© 2025 Beforecast. All rights reserved.</p>
     </footer>
 </body>
 </html>
