--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beforecast - Fishing Weather App</title>
     <link rel="stylesheet" href="css/styles.css">
-    <meta name="description" content="BeforeCast provides weather, wind direction, air pressure, and moon phases for anglers. Plan your fishing trips with precision.">
-    <meta name="keywords" content="BeforeCast, fishing, weather, app, anglers, moon phases">
+    <meta name="description" content="Beforecast provides weather, wind direction, air pressure, and moon phases for anglers. Plan your fishing trips with precision.">
+    <meta name="keywords" content="Beforecast, fishing, weather, app, anglers, moon phases">
 </head>
 <body>
     <header>
-        <h1>BeforeCast</h1>
+        <h1>Beforecast</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -21,19 +21,19 @@
     </header>
     <main>
         <section>
-            <h2>Welcome to BeforeCast</h2>
-            <p>BeforeCast is your ultimate fishing weather app, designed to help anglers make informed decisions with real-time data. Get accurate weather forecasts, wind direction, air pressure, and moon phases for your current location or any specified location. The app uses your device's location locally to fetch data from Apple's WeatherKit API, ensuring your location stays private and never leaves your device.</p>
+            <h2>Welcome to Beforecast</h2>
+            <p>Beforecast is your ultimate fishing weather app, designed to help anglers make informed decisions with real-time data. Get accurate weather forecasts, wind direction, air pressure, and moon phases for your current location or any specified location. The app uses your device's location locally to fetch data from Apple's WeatherKit API, ensuring your location stays private and never leaves your device.</p>
             <h3>Screenshots</h3>
             <div class="screenshots">
-                <img src="img/moon-phase.png" alt="BeforeCast Moon Phase screen showing the current waning crescent phase and moon calendar for May 2025">
-                <img src="img/wind.png" alt="BeforeCast Wind screen displaying wind direction, speed (10.6 mph), and gust (23.5 mph) for London">
-                <img src="img/air-pressure.png" alt="BeforeCast Air Pressure screen showing current pressure (1,017 mbar) and forecast for London">
-                <img src="img/general-forecast.png" alt="BeforeCast General Forecast screen with hourly and daily weather forecasts for London">
+                <img src="img/moon-phase.png" alt="Beforecast Moon Phase screen showing the current waning crescent phase and moon calendar for May 2025">
+                <img src="img/wind.png" alt="Beforecast Wind screen displaying wind direction, speed (10.6 mph), and gust (23.5 mph) for London">
+                <img src="img/air-pressure.png" alt="Beforecast Air Pressure screen showing current pressure (1,017 mbar) and forecast for London">
+                <img src="img/general-forecast.png" alt="Beforecast General Forecast screen with hourly and daily weather forecasts for London">
             </div>
         </section>
     </main>
     <footer>
-        <p>© 2025 BeforeCast. All rights reserved.</p>
+        <p>© 2025 Beforecast. All rights reserved.</p>
     </footer>
 </body>
 </html>
