--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - BeforeCast</title>
+    <title>Privacy Policy - Beforecast</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
         <section>
             <h2>Privacy Policy</h2>
             <p><strong>Effective Date: May 23, 2025</strong></p>
-            <p>BeforeCast ("we," "us," or "our") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, store, and share information when you use our BeforeCast app ("the App").</p>
+            <p>Beforecast ("we," "us," or "our") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, store, and share information when you use our Beforecast app ("the App").</p>
 
             <h3>1. Information We Collect</h3>
             <h4>1.1 Location Data</h4>
@@ -71,7 +71,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2025 BeforeCast. All rights reserved.</p>
+        <p>© 2025 Beforecast. All rights reserved.</p>
     </footer>
 </body>
 </html>
