Updated contact page

--- a/contact.html
+++ b/contact.html
@@ -20,16 +20,9 @@
     <main>
         <section>
             <h2>Get in Touch</h2>
-            <p>Have questions or feedback? Fill out the form below to contact us.</p>
-            <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" placeholder="Your Name" required>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Your Email" required>
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
-                <button type="submit">Send</button>
-            </form>
+            <p>Have questions or feedback? Reach out to us via email.</p>
+            <p><a href="mailto:support@beforecast.app">support@beforecast.app</a></p>
+            <p>We would love your feedback on how we can improve Beforecast. Please share your ideas or let us know if the app has made your fishing experience better!</p>
         </section>
     </main>
     <footer>
